adj: all adjusments

--- a/.env.copy
+++ b/.env.copy
@@ -1,10 +1,10 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=database2024
+DB_PASSWORD=password
 DB_NAME=weather_app
-DB_PORT=3306 
+DB_PORT=3306
 
-WEATHERSTACK_API_KEY=fdf23e708d0a67b05841337911f7bb16
+WEATHERAPI_API_KEY=24755c5259a64ba997790807250102
 
 APP_ENV=development
 DEBUG=True
